springapp/app_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: springsql
  name: springsql
  namespace: application
spec:
  type: NodePort
  ports:
     - port: 8080
  selector:
    app: springsql
