springapp/postgres_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: postgres
  namespace: application
spec:
  type: ClusterIP
  ports:
  - name: postgres-svc
    port: 8081
    targetPort: 8081
  selector:
    app: db
